--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,10 +35,10 @@ members = [
 ]
 
 [package.metadata.docs.rs]
-features = ["ssl", "tls", "brotli", "flate2-zlib", "cookies", "client", "rust-tls"]
+features = ["ssl", "tls", "brotli", "flate2-zlib", "secure-cookies", "client", "rust-tls"]
 
 [features]
-default = ["brotli", "flate2-zlib", "cookies", "client"]
+default = ["brotli", "flate2-zlib", "secure-cookies", "client"]
 
 # http client
 client = ["awc"]
@@ -53,7 +53,7 @@ flate2-zlib = ["actix-http/flate2-zlib"]
 flate2-rust = ["actix-http/flate2-rust"]
 
 # sessions feature, session require "ring" crate and c compiler
-cookies = ["cookie", "actix-http/cookies"]
+secure-cookies = ["actix-http/secure-cookies"]
 
 # tls
 tls = ["native-tls", "actix-server/ssl"]
@@ -94,9 +94,6 @@ serde_urlencoded = "^0.5.3"
 time = "0.1"
 url = { version="1.7", features=["query_encoding"] }
 
-# cookies support
-cookie = { version="0.11", features=["secure", "percent-encode"], optional = true }
-
 # ssl support
 native-tls = { version="0.2", optional = true }
 openssl = { version="0.10", optional = true }
@@ -111,9 +108,6 @@ serde_derive = "1.0"
 tokio-timer = "0.2.8"
 brotli2 = "0.3.2"
 flate2 = "1.0.2"
-
-[replace]
-"cookie:0.11.0" = { git = 'https://github.com/alexcrichton/cookie-rs.git' }
 
 [profile.release]
 lto = true
