--- a/actix-web-actors/Cargo.toml
+++ b/actix-web-actors/Cargo.toml
@@ -18,14 +18,16 @@ name = "actix_web_actors"
 path = "src/lib.rs"
 
 [dependencies]
-actix = "0.8.0-alpha.1"
-actix-web = "1.0.0-alpha.1"
-actix-http = "0.1.0-alpha.1"
+actix = "0.8.0-alpha.2"
+#actix-web = "1.0.0-alpha.1"
+#actix-http = "0.1.0-alpha.1"
+actix-web = { path=".." }
+actix-http = { path="../actix-http" }
 actix-codec = "0.1.2"
 bytes = "0.4"
 futures = "0.1.25"
 
 [dev-dependencies]
 env_logger = "0.6"
-actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
-actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
+#actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
+actix-http-test = { path = "../test-server", features=["ssl"] }
