--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -16,6 +16,9 @@ quote = "0.6"
 syn = { version = "0.15", features = ["full", "parsing"] }
 
 [dev-dependencies]
-actix-web = { version = "1.0.0-alpha.1" }
-actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
-actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
+#actix-web = { version = "1.0.0-alpha.1" }
+#actix-http = { version = "0.1.0-alpha.1", features=["ssl"] }
+#actix-http-test = { version = "0.1.0-alpha.1", features=["ssl"] }
+actix-web = { path = ".." }
+actix-http = { path = "../actix-http", features=["ssl"] }
+actix-http-test = { path = "../test-server", features=["ssl"] }
