--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-files"
-version = "0.1.0-alpha.1"
+version = "0.1.0-alpha.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Static files support for actix web."
 readme = "README.md"
@@ -18,10 +18,8 @@ name = "actix_files"
 path = "src/lib.rs"
 
 [dependencies]
-#actix-web = "1.0.0-alpha.1"
-actix-web = { path = ".." }
-actix-service = "0.3.3"
-
+actix-web = "1.0.0-alpha.2"
+actix-service = "0.3.4"
 bitflags = "1"
 bytes = "0.4"
 futures = "0.1.25"
@@ -33,5 +31,4 @@ percent-encoding = "1.0"
 v_htmlescape = "0.4"
 
 [dev-dependencies]
-#actix-web = { version = "1.0.0-alpha.1", features=["ssl"] }
-actix-web = { path = "..", features=["ssl"] }
+actix-web = { version = "1.0.0-alpha.2", features=["ssl"] }
