--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -38,7 +38,7 @@ flate2-rust = ["actix-http/flate2-rust"]
 [dependencies]
 actix-codec = "0.1.1"
 actix-service = "0.3.4"
-actix-http = { path = "../actix-http" }
+actix-http = "0.1.0-alpa.2"
 base64 = "0.10.1"
 bytes = "0.4"
 derive_more = "0.14"
@@ -54,11 +54,11 @@ openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-rt = "0.2.2"
-actix-web = { path = "..", features=["ssl"] }
-actix-http = { path = "../actix-http", features=["ssl"] }
-actix-http-test = { path = "../test-server", features=["ssl"] }
+actix-web = { version = "1.0.0-alpha.2", features=["ssl"] }
+actix-http = { version = "0.1.0-alpa.2", features=["ssl"] }
+actix-http-test = { version = "0.1.0-alpha.2", features=["ssl"] }
 actix-utils = "0.3.4"
-actix-server = { version = "0.4.0", features=["ssl"] }
+actix-server = { version = "0.4.1", features=["ssl"] }
 brotli2 = { version="0.3.2" }
 flate2 = { version="1.0.2" }
 env_logger = "0.6"
