Expand codegen to allow specify guards and async

--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -19,3 +19,4 @@ syn = { version = "0.15", features = ["full", "parsing"] }
 actix-web = { version = "1.0.0-alpha.2" }
 actix-http = { version = "0.1.0-alpha.2", features=["ssl"] }
 actix-http-test = { version = "0.1.0-alpha.2", features=["ssl"] }
+futures = { version = "0.1" }
