--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,4 +120,8 @@ actix = { git = "https://github.com/actix/actix.git" }
 actix-web = { path = "." }
 actix-http = { path = "actix-http" }
 actix-http-test = { path = "test-server" }
+actix-web-codegen = { path = "actix-web-codegen" }
+actix-web-actors = { path = "actix-web-actors" }
+actix-session = { path = "actix-session" }
+actix-files = { path = "actix-files" }
 awc = { path = "awc" }
