--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,6 @@ before_script:
   - export PATH=$PATH:~/.cargo/bin
 
 script:
-  - cargo clean
   - cargo update
   - cargo check --all --no-default-features
   - cargo test --all-features --all -- --nocapture
@@ -44,7 +43,7 @@ script:
 after_success:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_PULL_REQUEST" = "false" && "$TRAVIS_BRANCH" == "master" && "$TRAVIS_RUST_VERSION" == "stable" ]]; then
-      cargo doc --no-deps --all-features &&
+      cargo doc --all-features &&
       echo "<meta http-equiv=refresh content=0;url=os_balloon/index.html>" > target/doc/index.html &&
       git clone https://github.com/davisp/ghp-import.git &&
       ./ghp-import/ghp_import.py -n -p -f -m "Documentation upload" -r https://"$GH_TOKEN"@github.com/"$TRAVIS_REPO_SLUG.git" target/doc &&
