--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "actix-router"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Path router"
 keywords = ["actix"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-net.git"
-documentation = "https://actix.rs/api/actix-net/stable/actix_router/"
+documentation = "https://docs.rs/actix-router/"
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
-workspace = "../"
+workspace = ".."
 
 [lib]
 name = "actix_router"
@@ -23,7 +23,8 @@ default = ["http"]
 bytes = "0.4"
 regex = "1.0"
 serde = "1.0.80"
-string = "0.1.3"
+string = "0.2.0"
+log = "0.4"
 http = { version="0.1.14", optional=true }
 
 [dev-dependencies]
