remove some static contraints

--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -55,5 +55,5 @@ tokio-timer = "0.2"
 openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
-actix-web = "1.0.0-alpa.3"
-actix-http = "0.1.0-alpa.3"
+actix-web = "1.0.0-alpha.3"
+actix-http = "0.1.0-alpha.3"
