--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -60,6 +60,7 @@ bitflags = "1.0"
 bytes = "0.4"
 byteorder = "1.2"
 derive_more = "0.14"
+either = "1.5.2"
 encoding = "0.2"
 futures = "0.1"
 hashbrown = "0.1.8"
