--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -59,6 +59,7 @@ base64 = "0.10"
 bitflags = "1.0"
 bytes = "0.4"
 byteorder = "1.2"
+copyless = "0.1.2"
 derive_more = "0.14"
 either = "1.5.2"
 encoding = "0.2"
