Fix body propagation in Response::from_error. #760

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ members = [
   "awc",
   "actix-http",
   "actix-files",
+  "actix-framed",
   "actix-session",
   "actix-multipart",
   "actix-web-actors",
