--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -40,7 +40,7 @@ http = { version = "0.1.16", optional = true }
 log = "0.4"
 tokio-tcp = "0.1.3"
 tokio-current-thread = "0.1.5"
-trust-dns-resolver = { version="0.11.0-alpha.3", default-features = false }
+trust-dns-resolver = { version="0.11.0", default-features = false }
 
 # openssl
 openssl = { version="0.10", optional = true }
