--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-server"
-version = "0.4.2"
+version = "0.4.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix server - General purpose tcp server"
 keywords = ["network", "framework", "async", "futures"]
@@ -27,20 +27,20 @@ default = []
 tls = ["native-tls"]
 
 # openssl
-ssl = ["openssl", "tokio-openssl"]
+ssl = ["openssl", "tokio-openssl", "actix-server-config/ssl"]
 
 # rustls
-rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots"]
+rust-tls = ["rustls", "tokio-rustls", "webpki", "webpki-roots", "actix-server-config/rust-tls"]
 
 [dependencies]
 actix-rt = "0.2.1"
 actix-service = "0.3.4"
-actix-server-config = "0.1.0"
+actix-server-config = "0.1.1"
 
 log = "0.4"
 num_cpus = "1.0"
 
-mio = "^0.6.13"
+mio = "0.6.13"
 net2 = "0.2"
 futures = "0.1"
 slab = "0.4"
@@ -58,12 +58,12 @@ openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.3", optional = true }
 
 #rustls
-rustls = { version = "^0.15", optional = true }
-tokio-rustls = { version = "^0.9", optional = true }
+rustls = { version = "0.15.2", optional = true }
+tokio-rustls = { version = "0.9.1", optional = true }
 webpki = { version = "0.19", optional = true }
 webpki-roots = { version = "0.16", optional = true }
 
 [dev-dependencies]
 bytes = "0.4"
-actix-codec = "0.1.0"
+actix-codec = "0.1.2"
 env_logger = "0.6"
