--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-http"
-version = "0.1.0-alpha.5"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix http primitives"
 readme = "README.md"
@@ -26,7 +26,7 @@ path = "src/lib.rs"
 default = []
 
 # openssl
-ssl = ["openssl", "actix-connect/ssl"]
+ssl = ["openssl", "actix-connect/ssl", "actix-server-config/ssl"]
 
 # brotli encoding, requires c compiler
 brotli = ["brotli2"]
@@ -48,7 +48,7 @@ actix-service = "0.3.6"
 actix-codec = "0.1.2"
 actix-connect = "0.1.4"
 actix-utils = "0.3.5"
-actix-server-config = "0.1.0"
+actix-server-config = "0.1.1"
 actix-threadpool = "0.1.0"
 
 base64 = "0.10"
@@ -60,7 +60,7 @@ derive_more = "0.14"
 either = "1.5.2"
 encoding = "0.2"
 futures = "0.1"
-hashbrown = "0.2.0"
+hashbrown = "0.2.2"
 h2 = "0.1.16"
 http = "0.1.17"
 httparse = "1.3"
@@ -76,10 +76,10 @@ serde = "1.0"
 serde_json = "1.0"
 sha1 = "0.6"
 slab = "0.4"
-serde_urlencoded = "0.5.3"
+serde_urlencoded = "0.5.5"
 time = "0.1"
 tokio-tcp = "0.1.3"
-tokio-timer = "0.2"
+tokio-timer = "0.2.8"
 tokio-current-thread = "0.1"
 trust-dns-resolver = { version="0.11.0", default-features = false }
 
@@ -96,7 +96,7 @@ openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-rt = "0.2.2"
-actix-server = { version = "0.4.1", features=["ssl"] }
+actix-server = { version = "0.4.3", features=["ssl"] }
 actix-connect = { version = "0.1.4", features=["ssl"] }
 actix-http-test = { version = "0.1.0-alpha.3", features=["ssl"] }
 env_logger = "0.6"
