--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -33,7 +33,7 @@ ssl = ["openssl", "actix-server/ssl", "awc/ssl"]
 actix-codec = "0.1.2"
 actix-rt = "0.2.2"
 actix-service = "0.3.6"
-actix-server = "0.4.1"
+actix-server = "0.4.3"
 actix-utils = "0.3.5"
 awc = "0.1.0-alpha.5"
 
@@ -56,4 +56,4 @@ openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-web = "1.0.0-alpha.5"
-actix-http = "0.1.0-alpha.5"
+actix-http = "0.1.0"
