--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ actix-http = { version = "0.1.0", features=["fail"] }
 actix-server = "0.4.3"
 actix-server-config = "0.1.1"
 actix-threadpool = "0.1.0"
-awc = { version = "0.1.0-alpha.6", optional = true }
+awc = { version = "0.1.0", optional = true }
 
 bytes = "0.4"
 derive_more = "0.14"
