--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-http-test"
-version = "0.1.0-alpha.3"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix http test server"
 readme = "README.md"
@@ -35,7 +35,7 @@ actix-rt = "0.2.2"
 actix-service = "0.3.6"
 actix-server = "0.4.3"
 actix-utils = "0.3.5"
-awc = "0.1.0-alpha.5"
+awc = "0.1.0"
 
 base64 = "0.10"
 bytes = "0.4"
