--- a/actix-web-actors/Cargo.toml
+++ b/actix-web-actors/Cargo.toml
@@ -20,11 +20,11 @@ path = "src/lib.rs"
 [dependencies]
 actix = "0.8.0"
 actix-web = "1.0.0-alpha.5"
-actix-http = "0.1.0-alpha.5"
+actix-http = "0.1.0"
 actix-codec = "0.1.2"
 bytes = "0.4"
 futures = "0.1.25"
 
 [dev-dependencies]
 env_logger = "0.6"
-actix-http-test = { version = "0.1.0-alpha.3", features=["ssl"] }
+actix-http-test = { version = "0.1.0", features=["ssl"] }
