--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,7 @@ rustls = { version = "^0.15", optional = true }
 
 [dev-dependencies]
 actix-http = { version = "0.1.0", features=["ssl", "brotli", "flate2-zlib"] }
-actix-http-test = { version = "0.1.0-alpha.3", features=["ssl"] }
+actix-http-test = { version = "0.1.0", features=["ssl"] }
 actix-files = { version = "0.1.0-alpha.6" }
 rand = "0.6"
 env_logger = "0.6"
@@ -116,7 +116,6 @@ codegen-units = 1
 [patch.crates-io]
 actix-web = { path = "." }
 actix-http = { path = "actix-http" }
-actix-http-test = { path = "test-server" }
 actix-web-codegen = { path = "actix-web-codegen" }
 actix-web-actors = { path = "actix-web-actors" }
 actix-session = { path = "actix-session" }
