--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -98,7 +98,7 @@ openssl = { version="0.10", optional = true }
 actix-rt = "0.2.2"
 actix-server = { version = "0.4.3", features=["ssl"] }
 actix-connect = { version = "0.1.4", features=["ssl"] }
-actix-http-test = { version = "0.1.0-alpha.3", features=["ssl"] }
+actix-http-test = { version = "0.1.0", features=["ssl"] }
 env_logger = "0.6"
 serde_derive = "1.0"
 openssl = { version="0.10" }
