--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -57,7 +57,7 @@ openssl = { version="0.10", optional = true }
 actix-rt = "0.2.2"
 actix-web = { version = "1.0.0-alpha.6", features=["ssl"] }
 actix-http = { version = "0.1.0", features=["ssl"] }
-actix-http-test = { version = "0.1.0-alpha.3", features=["ssl"] }
+actix-http-test = { version = "0.1.0", features=["ssl"] }
 actix-utils = "0.3.4"
 actix-server = { version = "0.4.3", features=["ssl"] }
 brotli2 = { version="0.3.2" }
