prepare actix-framed release

--- a/actix-framed/Cargo.toml
+++ b/actix-framed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-framed"
-version = "0.1.0-alpha.1"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix framed app server"
 readme = "README.md"
