--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "actix-router"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Path router"
+description = "Path table router"
 keywords = ["actix"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-net.git"
