--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web"
-version = "1.0.0-beta.1"
+version = "1.0.0-beta.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix web is a simple, pragmatic and extremely fast web framework for Rust."
 readme = "README.md"
@@ -71,10 +71,11 @@ actix-utils = "0.3.4"
 actix-router = "0.1.3"
 actix-rt = "0.2.2"
 actix-web-codegen = "0.1.0-beta.1"
-actix-http = { version = "0.1.2", features=["fail"] }
+actix-http = { version = "0.1.4", features=["fail"] }
 actix-server = "0.4.3"
 actix-server-config = "0.1.1"
 actix-threadpool = "0.1.0"
+actix = { version = "0.8.1", features=["http"], optional = true }
 awc = { version = "0.1.1", optional = true }
 
 bytes = "0.4"
@@ -98,7 +99,7 @@ openssl = { version="0.10", optional = true }
 rustls = { version = "^0.15", optional = true }
 
 [dev-dependencies]
-actix-http = { version = "0.1.2", features=["ssl", "brotli", "flate2-zlib"] }
+actix-http = { version = "0.1.4", features=["ssl", "brotli", "flate2-zlib"] }
 actix-http-test = { version = "0.1.1", features=["ssl"] }
 actix-files = { version = "0.1.0-beta.1" }
 rand = "0.6"
