--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -21,7 +21,8 @@ path = "src/lib.rs"
 actix-service = "0.3.3"
 actix-codec = "0.1.1"
 bytes = "0.4"
-futures = "0.1.24"
+either = "1.5.2"
+futures = "0.1.25"
 tokio-timer = "0.2.8"
 tokio-current-thread = "0.1.4"
 log = "0.4"
