--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,10 @@ members = [
 ]
 
 [dev-dependencies]
-actix-service = "0.3.3"
+actix-service = "0.4.0"
 actix-codec = "0.1.1"
 actix-rt = "0.2.0"
-actix-server = { path="actix-server", features=["ssl"] }
+actix-server = { version="0.5.0", features=["ssl"] }
 env_logger = "0.6"
 futures = "0.1.25"
 openssl = "0.10"
