--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ actix-service = "0.4.0"
 actix-utils = "0.4.1"
 actix-router = "0.1.5"
 actix-rt = "0.2.2"
-actix-web-codegen = "0.1.0-beta.1"
+actix-web-codegen = "0.1.0"
 actix-http = "0.2.0"
 actix-server = "0.5.0"
 actix-server-config = "0.1.1"
