--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -18,7 +18,7 @@ name = "actix_files"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = "1.0.0-beta.5"
+actix-web = "1.0.0-rc"
 actix-service = "0.4.0"
 bitflags = "1"
 bytes = "0.4"
