--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web"
-version = "1.0.0-rc"
+version = "1.0.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix web is a simple, pragmatic and extremely fast web framework for Rust."
 readme = "README.md"
@@ -102,7 +102,7 @@ rustls = { version = "0.15", optional = true }
 [dev-dependencies]
 actix-http = { version = "0.2.0", features=["ssl", "brotli", "flate2-zlib"] }
 actix-http-test = { version = "0.2.0", features=["ssl"] }
-actix-files = { version = "0.1.0-beta.4" }
+actix-files = { version = "0.1.0" }
 rand = "0.6"
 env_logger = "0.6"
 serde_derive = "1.0"
