--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -13,7 +13,7 @@ proc-macro = true
 
 [dependencies]
 quote = "0.6"
-syn = { version = "0.15", features = ["full", "parsing"] }
+syn = { version = "0.15", features = ["full", "parsing", "extra-traits"] }
 
 [dev-dependencies]
 actix-web = { version = "1.0.0-beta.5" }
