--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -19,6 +19,7 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = "1.0.0-rc"
+actix-http = "0.2.2"
 actix-service = "0.4.0"
 bitflags = "1"
 bytes = "0.4"
