Allow to test an app that uses async actors #897

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,7 +103,8 @@ rustls = { version = "0.15", optional = true }
 [dev-dependencies]
 actix-http = { version = "0.2.3", features=["ssl", "brotli", "flate2-zlib"] }
 actix-http-test = { version = "0.2.0", features=["ssl"] }
-actix-files = { version = "0.1.1" }
+actix-files = "0.1.1"
+actix = { version = "0.8.3" }
 rand = "0.6"
 env_logger = "0.6"
 serde_derive = "1.0"
