--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
   ".",
   "awc",
   "actix-http",
+  "actix-cors",
   "actix-files",
   "actix-framed",
   "actix-session",
@@ -79,6 +80,8 @@ actix-server = "0.5.1"
 actix-server-config = "0.1.1"
 actix-threadpool = "0.1.1"
 awc = { version = "0.2.1", optional = true }
+
+# actix-cors = "0.1."{ path="./actix-cors" }
 
 bytes = "0.4"
 derive_more = "0.14"
