--- a/actix-session/Cargo.toml
+++ b/actix-session/Cargo.toml
@@ -24,12 +24,12 @@ default = ["cookie-session"]
 cookie-session = ["actix-web/secure-cookies"]
 
 [dependencies]
-actix-web = "1.0.0-rc"
-actix-service = "0.4.0"
+actix-web = "1.0.0"
+actix-service = "0.4.1"
 bytes = "0.4"
-derive_more = "0.14"
+derive_more = "0.15.0"
 futures = "0.1.25"
-hashbrown = "0.3.0"
+hashbrown = "0.5.0"
 serde = "1.0"
 serde_json = "1.0"
 time = "0.1.42"
