--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -40,11 +40,11 @@ flate2-rust = ["actix-http/flate2-rust"]
 
 [dependencies]
 actix-codec = "0.1.2"
-actix-service = "0.4.0"
-actix-http = "0.2.3"
+actix-service = "0.4.1"
+actix-http = "0.2.4"
 base64 = "0.10.1"
 bytes = "0.4"
-derive_more = "0.14"
+derive_more = "0.15.0"
 futures = "0.1.25"
 log =" 0.4"
 mime = "0.3"
@@ -58,8 +58,8 @@ openssl = { version="0.10", optional = true }
 
 [dev-dependencies]
 actix-rt = "0.2.2"
-actix-web = { version = "1.0.0-rc", features=["ssl"] }
-actix-http = { version = "0.2.3", features=["ssl"] }
+actix-web = { version = "1.0.0", features=["ssl"] }
+actix-http = { version = "0.2.4", features=["ssl"] }
 actix-http-test = { version = "0.2.0", features=["ssl"] }
 actix-utils = "0.4.1"
 actix-server = { version = "0.5.1", features=["ssl"] }
