remove cors and identity middlewares

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ members = [
 ]
 
 [features]
-default = ["brotli", "flate2-zlib", "client", "fail", "depracated"]
+default = ["brotli", "flate2-zlib", "client", "fail"]
 
 # http client
 client = ["awc"]
@@ -68,9 +68,6 @@ ssl = ["openssl", "actix-server/ssl", "awc/ssl"]
 # rustls
 rust-tls = ["rustls", "actix-server/rust-tls"]
 
-# deprecated middlewares
-depracated = ["actix-cors", "actix-identity"]
-
 [dependencies]
 actix-codec = "0.1.2"
 actix-service = "0.4.1"
@@ -83,10 +80,6 @@ actix-server = "0.5.1"
 actix-server-config = "0.1.1"
 actix-threadpool = "0.1.1"
 awc = { version = "0.2.1", optional = true }
-
-# deprecated middlewares
-actix-cors = { version = "0.1.0", optional = true }
-actix-identity = { version = "0.1.0", optional = true  }
 
 bytes = "0.4"
 derive_more = "0.15.0"
@@ -125,7 +118,7 @@ opt-level = 3
 codegen-units = 1
 
 [patch.crates-io]
-# actix-web = { path = "." }
+actix-web = { path = "." }
 actix-http = { path = "actix-http" }
 actix-http-test = { path = "test-server" }
 actix-web-codegen = { path = "actix-web-codegen" }
