--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,7 @@ awc = { version = "0.2.1", optional = true }
 
 bytes = "0.4"
 derive_more = "0.15.0"
-encoding = "0.2"
+encoding_rs = "0.8"
 futures = "0.1.25"
 hashbrown = "0.5.0"
 log = "0.4"
