--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -58,7 +58,7 @@ byteorder = "1.2"
 copyless = "0.1.2"
 derive_more = "0.15.0"
 either = "1.5.2"
-encoding = "0.2"
+encoding_rs = "0.8"
 futures = "0.1.25"
 hashbrown = "0.5.0"
 h2 = "0.1.16"
