Unix domain sockets (HttpServer::bind_uds) #92

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 edition = "2018"
 
 [package.metadata.docs.rs]
-features = ["ssl", "brotli", "flate2-zlib", "secure-cookies", "client", "rust-tls"]
+features = ["ssl", "brotli", "flate2-zlib", "secure-cookies", "client", "rust-tls", "uds"]
 
 [badges]
 travis-ci = { repository = "actix/actix-web", branch = "master" }
@@ -68,6 +68,9 @@ ssl = ["openssl", "actix-server/ssl", "awc/ssl"]
 # rustls
 rust-tls = ["rustls", "actix-server/rust-tls"]
 
+# unix domain sockets support
+uds = ["actix-server/uds"]
+
 [dependencies]
 actix-codec = "0.1.2"
 actix-service = "0.4.1"
@@ -76,8 +79,8 @@ actix-router = "0.1.5"
 actix-rt = "0.2.4"
 actix-web-codegen = "0.1.2"
 actix-http = "0.2.6"
-actix-server = "0.5.1"
-actix-server-config = "0.1.1"
+actix-server = "0.6.0"
+actix-server-config = "0.1.2"
 actix-threadpool = "0.1.1"
 awc = { version = "0.2.1", optional = true }
 
